# solana-tx-meta-parser-generators

./: Cargo.toml  parse_legacy_transaction_status_meta.go
src/b7b4aa5d4d34ebf3fd338a64f4f2a5257b047bb4/: main.rs
src/ce598c5c98e7384c104fe7f5121e32c2c5a2d2eb/: main.rs
